[gd_scene load_steps=19 format=2]

[ext_resource path="res://game/FloorGenerator.gd" type="Script" id=1]
[ext_resource path="res://art1.png" type="Texture" id=2]
[ext_resource path="res://autotile.png" type="Texture" id=3]
[ext_resource path="res://HealthBar.gd" type="Script" id=4]
[ext_resource path="res://ui/HealthBarHeart.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/Game.gd" type="Script" id=12]
[ext_resource path="res://ui/theme.tres" type="Theme" id=13]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 8, 8, 0.0473633, 8, 0.0473633, 0, 8, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="TileSet" id=1]
0/name = "floor0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "floor2"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 8, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "floor1"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 8, 0, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "floor3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 8, 8, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "autotile.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 1
4/autotile/bitmask_mode = 0
4/autotile/bitmask_flags = [ Vector2( 0, 0 ), 64, Vector2( 0, 1 ), 257, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 260, Vector2( 1, 1 ), 324, Vector2( 1, 2 ), 5, Vector2( 1, 3 ), 256, Vector2( 2, 0 ), 321, Vector2( 2, 1 ), 325, Vector2( 2, 2 ), 261, Vector2( 2, 3 ), 68, Vector2( 3, 0 ), 320, Vector2( 3, 1 ), 69, Vector2( 3, 2 ), 65, Vector2( 3, 3 ), 1 ]
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 8, 8 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="InputEventAction" id=6]
action = "accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=13]
action = "accept"

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[sub_resource type="InputEventAction" id=11]
action = "accept"

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventAction" id=9]
action = "cancel"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[node name="Game" type="Node"]
script = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 160.0
margin_bottom = 144.0
color = Color( 0.167969, 0.145004, 0.167969, 1 )

[node name="Floor" type="Node2D" parent="."]
position = Vector2( 24, 16 )
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="Floor"]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 1, 0, 2, 3, 0, 3, 1, 0, 65536, 1, 0, 65537, 3, 0, 65538, 1, 0, 65539, 3, 0, 131072, 3, 0, 131073, 1, 0, 131074, 3, 0, 131075, 1, 0, 196608, 1, 0, 196609, 3, 0, 196610, 1, 0, 196611, 3, 0 )

[node name="Corners2" type="Sprite" parent="Floor"]
visible = false
texture = ExtResource( 2 )
centered = false
offset = Vector2( -2, -2 )
region_enabled = true
region_rect = Rect2( 14, 30, 28, 28 )

[node name="Entities" type="Node2D" parent="Floor"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ResourceLabel" type="Label" parent="UI"]
anchor_right = 1.0
margin_bottom = 13.0
theme = ExtResource( 13 )
text = "Treasure: 00/00"
align = 1

[node name="FighterUI" type="Node2D" parent="UI"]
position = Vector2( 0, 48 )

[node name="Sprite" type="Sprite" parent="UI/FighterUI"]
position = Vector2( 8, 0 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 48, 8, 8, 8 )

[node name="HealthBar" type="Node2D" parent="UI/FighterUI"]
position = Vector2( 0, 8 )
script = ExtResource( 4 )
heart_color = Color( 0.482353, 0.729412, 0.45098, 1 )

[node name="HealthBarHeart" parent="UI/FighterUI/HealthBar" instance=ExtResource( 5 )]
modulate = Color( 0.482353, 0.729412, 0.45098, 1 )

[node name="HealthBarHeart2" parent="UI/FighterUI/HealthBar" instance=ExtResource( 5 )]
modulate = Color( 0.482353, 0.729412, 0.45098, 1 )
position = Vector2( 7, 0 )

[node name="HealthBarHeart3" parent="UI/FighterUI/HealthBar" instance=ExtResource( 5 )]
modulate = Color( 0.482353, 0.729412, 0.45098, 1 )
position = Vector2( 14, 0 )

[node name="Label" type="Label" parent="UI/FighterUI"]
margin_top = 11.0
margin_right = 24.0
margin_bottom = 21.0
text = "wasd"
align = 1

[node name="ThiefUI" type="Node2D" parent="UI"]
position = Vector2( 56, 48 )

[node name="Sprite" type="Sprite" parent="UI/ThiefUI"]
position = Vector2( 8, 0 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 8, 8, 8 )

[node name="HealthBar" type="Node2D" parent="UI/ThiefUI"]
position = Vector2( 15, 8 )
script = ExtResource( 4 )
heart_width = -7
heart_color = Color( 0.741176, 0.34902, 0.870588, 1 )

[node name="HealthBarHeart" parent="UI/ThiefUI/HealthBar" instance=ExtResource( 5 )]
modulate = Color( 0.741176, 0.34902, 0.870588, 1 )

[node name="HealthBarHeart2" parent="UI/ThiefUI/HealthBar" instance=ExtResource( 5 )]
modulate = Color( 0.741176, 0.34902, 0.870588, 1 )
position = Vector2( -7, 0 )

[node name="HealthBarHeart3" parent="UI/ThiefUI/HealthBar" instance=ExtResource( 5 )]
modulate = Color( 0.741176, 0.34902, 0.870588, 1 )
position = Vector2( -14, 0 )

[node name="Label" type="Label" parent="UI/ThiefUI"]
margin_top = 11.0
margin_right = 24.0
margin_bottom = 16.0
text = "ijkl"
align = 1

[node name="TreasureMessage" type="Panel" parent="UI" groups=["popups"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = -8.0
theme = ExtResource( 13 )

[node name="Label" type="Label" parent="UI/TreasureMessage"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.678431, 0.388235, 1 )
text = "Max treasure collected!"
align = 1
autowrap = true

[node name="Button" type="Button" parent="UI/TreasureMessage"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = -6.0
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
text = "Surface"

[node name="HealthMessage" type="Panel" parent="UI" groups=["popups"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = -20.0
theme = ExtResource( 13 )

[node name="Label" type="Label" parent="UI/HealthMessage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
text = "Ran out of health!"
align = 1
autowrap = true

[node name="Button" type="Button" parent="UI/HealthMessage"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = -6.0
shortcut_in_tooltip = false
shortcut = SubResource( 14 )
text = "Surface"

[node name="EscapeMessage" type="Panel" parent="UI" groups=["popups"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = -20.0
theme = ExtResource( 13 )

[node name="Label" type="Label" parent="UI/EscapeMessage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
text = "Surface now?"
align = 1
autowrap = true

[node name="YesButton" type="Button" parent="UI/EscapeMessage"]
margin_left = 4.0
margin_top = 16.0
margin_right = 30.0
margin_bottom = 31.0
shortcut_in_tooltip = false
shortcut = SubResource( 12 )
text = "Yes"

[node name="NoButton" type="Button" parent="UI/EscapeMessage"]
margin_left = 32.0
margin_top = 16.0
margin_right = 60.0
margin_bottom = 31.0
shortcut_in_tooltip = false
shortcut = SubResource( 10 )
text = "No"

[connection signal="pressed" from="UI/TreasureMessage/Button" to="." method="_on_SurfaceButton_pressed"]
[connection signal="pressed" from="UI/HealthMessage/Button" to="." method="_on_SurfaceButton_pressed"]
[connection signal="pressed" from="UI/EscapeMessage/YesButton" to="." method="_on_SurfaceButton_pressed"]
[connection signal="pressed" from="UI/EscapeMessage/NoButton" to="." method="_on_CancelButton_pressed"]
